交易结果更新

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_result.vm
@@ -1,24 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 充值中心</title>
+    <title>幼富通 - 充值</title>
 </head>
 <body>
-<div class="body">
-    <div class="inner clearfix">
-        <div class="title clearfix">
-            <h2 class="title-main fl">资产总览 | 充值</h2>
-        </div>
-        <div class="form-payInto">
-			<div style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
-            	<h1>充值成功！</h1>
-            	<p>您的充值已成功，可通过交易查询查询记录状态。
-            	   <a href="${staticDomain}/cust/session.htm">立即查询</a>
-            	</p>
+   
+    <div class="body">
+        <div class="inner container-find">
+           <div class="title clearfix" style="margin-top:0;">
+                <h2 class="title-main fl">充值</h2>
+            </div>
+            <div class="find-panels">
+                <div class="panel">
+                    <div class="form-done">
+                        <div class="title" style="margin-top:0;background:transparent">成功提交充值申请</div>
+						<p>申请日期：${today}</p>
+                        <p></p>
+                        <p>预计收益到帐：${nextWorkDay}</p>
+                        <a class="btn" href="${staticDomain}/cust/session.htm">我的幼富通</a>
+                        <div class="tips">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+   
 <script src="${staticDomain}/js/scripts/load.js"></script>
 </body>
 </html>
