--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
@@ -1,31 +1,38 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 充值中心</title>
+    <title>幼富通 - 取现</title>
 </head>
 <body>
-<div class="body">
-    <div class="inner clearfix">
-        <div class="title clearfix">
-            <h2 class="title-main fl">资产总览 | 取现</h2>
-        </div>
-        <div class="form-payInto">
-			<div style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
-            	#if(${APKIND} == "023")
-            	<h1>取现成功！</h1>
-            	<p>您的取现已成功，资金将于第二个工作日下午17点前，到达您的银行卡中，可通过交易查询查询记录状态。
-            	   <a href="${staticDomain}/cust/session.htm">立即查询</a>
-            	</p>
-            	#elseif(${APKIND} == "024")
-            	<h1>快速取现成功！</h1>
-            	<p>您的快速取现已成功，资金稍后将到达您的银行卡中，可通过交易查询查询记录状态。
-            	   <a href="${staticDomain}/cust/session.htm">立即查询</a>
-            	</p>
-            	#end
+   
+    <div class="body">
+        <div class="inner container-find">
+           <div class="title clearfix" style="margin-top:0;">
+				#if(${APKIND} == "023")
+                <h2 class="title-main fl">取现</h2>
+				#elseif(${APKIND} == "024")
+				<h2 class="title-main fl">快速取现</h2>
+				#end
+            </div>
+            <div class="find-panels">
+                <div class="panel">
+                    <div class="form-done">
+                        <div class="title" style="margin-top:0;background:transparent">成功提交取现申请</div>
+						<p>申请日期：${today}</p>
+                        <p></p>
+						#if(${APKIND} == "023")
+                        <p>您的取现已成功，资金将于第二个工作日（${nextWorkDay}）下午17点前，到达您的银行卡中，可通过交易查询查询记录状态。</p>
+        				#elseif(${APKIND} == "024")
+        				<p>您的快速取现已成功，资金稍后将到达您的银行卡中，可通过交易查询查询记录状态。</p>
+        				#end
+                        <a class="btn" href="${staticDomain}/cust/session.htm">我的幼富通</a>
+                        <div class="tips">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 </body>
 </html>
